--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "next": "9.5.5",
@@ -17,6 +18,8 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.11.1"
+    "@types/node": "^14.14.5",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.5"
   }
 }
